[tool.poetry]
name = "geo-down"
version = "0.1.0"
description = ""
authors = ["tpob <tpob@tpob.xyz>"]
readme = "README.md"
packages = [{ include = "geo_down" }]

[tool.poetry.dependencies]
python = "~3.11"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.12.0"

[tool.poetry.scripts]
geo-down = "geo_down.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
